# pico-mixer

./: .gitignore  LICENSE  Makefile  README.md  code.py  config.json  mixer.py  pyproject.toml  requirements.txt  win-install.bat  win-run.bat
lib/: pimoroni_rgbkeypad.py
pico/: code.py
pico/lib/: pimoroni_rgbkeypad.py
pico_mixer/: mixer.py
pico_mixer_web/: app.py  server.py
pico_mixer_web/assets/js/: script.js
pico_mixer_web/templates/: index.html.j2
