[tool.poetry]
name = "pico-mixer"
version = "0.1.0"
description = "A small sound mixing app driven by a Pimoroni Keypad"
authors = ["Balthazar Rouberol <br@imap.cc>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pico_mixer"}]

[tool.poetry.dependencies]
python = "^3.7"
pyserial = "^3.5"
Flask = "^2.2.2"
flask-sock = "^0.5.2"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
